# it-hercules-laboratory

./: .dockerignore  .env.local.example  .env.platform.example  .gitignore  00-AI-HANDOFF-BRIEF.md  01-USER-INTENT-SUMMARY.md  03-CIV-OS-AI-SPEC-統合版.md  05-GitHub運用-コンポーネント掲示板.md  CONTRIBUTING.md  Dockerfile  Dockerfile.web  IMPLEMENTATION.md  LICENSE  Makefile  README.md  dev-up.cmd  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml
01-要件/: 00-プロダクト方針・MVP・拡張安全枠-v1-DRAFT.md  00-土台-MiniKernel-C-USB-コンポーネント.md  00-要件完成度監査-05-07-10-14-16-23.md  01-ログイン.md  02-利用規約.md  03-新規登録.md  04-ホーム画面.md  05-観測.md  06-マーケット.md  07-掲示板.md  08-カルマシステム.md  09-論文.md  10-マチアプ.md  11-裁判.md  12-設定.md  13-データ取得元管理.md  14-貢献度.md  15-データ設計.md  16-UIbuilder.md  17-UI選択画面改善.md  18-写真解析.md  19-コンポーネント掲示板.md  21-翻訳-言語.md  22-プラチナコインマーケット.md  23-GMO銀行振込判定.md  24-記事・ブログ-v1-DRAFT.md  25-AI要約-GitHub改善掲示板-v1-DRAFT.md  26-サンドボックス環境-v1-DRAFT.md  27-ランニングコスト透明性-v1-DRAFT.md  28-個体命名・ブランドテンプレート-v1-DRAFT.md  README.md
02-設計/: ADR-Phase2-OSS-確定.md  ADR-UI-Rebuild-Waterfall-Plan-DRAFT.md  ADR-プチWF-観測ver1残件と命名-v1-DRAFT.md  Phase6-W0-実装着手メモ-v1.md  Phase6-W1-W3-進捗-v1.md  Phase6-打鍵フィードバック-v1.md
05-運用/: env-setup-v1.md
UI設計/: README.md
_legacy-index/: UI設計-README.md  機能一覧-要件定義-README.md
apps/: __init__.py
catalog/: components.yaml
collector/: Dockerfile  README.md  generate-ed25519-key.mjs  package.json  smoke-keys.cjs  switchbot-local-collector.mjs  sync-public-key-from-collector.mjs
components/: __init__.py
configs/: dev.yaml
(+850 files in other folders)
