[project]
name = "it-hercules-laboratory"
version = "0.1.0"
description = "IT Hercules Laboratory — append-only R2 data lake (Phase 1 foundation)"
readme = "IMPLEMENTATION.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "boto3>=1.34,<2",
    "cryptography>=42,<45",
    "duckdb>=1.0,<2",
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "jsonschema>=4.23,<5",
    "numpy>=1.26,<3",
    "pillow>=10.3,<12",
    "polars>=1.0,<2",
    "pydantic>=2.7,<3",
    "pyyaml>=6.0,<7",
    "streamlit>=1.35,<2",
    "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-cov>=5.0,<6",
]
ml = [
    "torch>=2.2,<3",
    "torchvision>=0.17,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["libs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
